# MartinBot

./: Dockerfile  README.md  setup.cfg  test.ipynb
martin_bot/: __main__.py
martin_bot/api/: blueprints.py
martin_bot/core/cogs/: finance.py  general.py  google_trends.py  stable_diffusion.py
martin_bot/core/modules/: graphs.py
martin_bot/util/: __init__.py
