[metadata]
name = martin_bot
version = attr: martin_bot.__version__
url = 
download_url = 
description = 
long_description = file: README.md
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
python_requires = >=3.7
install_requires =
    #beautifulsoup4 ==4.11.1
    discord.py==1.7.3
    Flask==2.0.2
    requests==2.26.0
    pytrends
    yfinance
    
    #matplotlib==3.5.2

packages = find:

[options.extras_require]
dev =
    black
    mypy
    mypy-extensions
    ipykernel
    flake8
    boto3-stubs[essential]

[flake8]
per-file-ignores =
    *.pyi:E301,E302,E704
ignore = 
    E501
    E252
    W503
max-line-length = 150
